# meltout

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  history.txt
certs/: ca.pem  rootCA-key.pem  server.key  server.pem
implant/: Cargo.toml  build.rs
implant/src/: embed.rs  exec.rs  main.rs
implant/src/exec/: mod.rs
implant/src/pb/: mod.rs
implant/src/rpc/: mod.rs
proto/: implant.proto  operator.proto
src/: meltout-operator.rs  meltout-server.rs
src/operator/: mod.rs  operator.rs
src/operator/args/: mod.rs
src/operator/commands/: mod.rs
src/operator/net/: mod.rs
src/server/: mod.rs  parsers.rs
src/server/commands/: mod.rs
src/server/controls/: controller.rs  mod.rs
src/server/db/: db.rs  mod.rs
src/server/db/entities/: implants.rs  mod.rs  tasks.rs
src/server/db/migration/: m20220929_000001_create_implants_table.rs  m20220929_000002_create_tasks_table.rs  mod.rs
src/server/extra/: mod.rs
src/server/net/: implant_server.rs  mod.rs  operator_server.rs
src/share/: errors.rs  mod.rs
src/share/commands/: mod.rs
src/share/console/: mod.rs  notifications.rs  parsers.rs
src/share/pb/: mod.rs
