[package]
name = "meltout"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "meltout-server"
path = "src/meltout-server.rs"

[[bin]]
name = "meltout-operator"
path = "src/meltout-operator.rs"

[dependencies]
clap = { version = "3.2.21", features = ["derive", "color"] }
crossbeam-queue = "0.3.6"
futures = "0.3.24"
hyper = "0.14.20"
hyper-rustls = { version = "0.23.0", features = ["http2"] }
inquire = "0.3.0"
prost = "0.11.0"
queues = "1.1.0"
rustls-pemfile = "1.0.1"
rustyline = "10.0.0"
shlex = "1.1.0"
thiserror = "1.0.35"
tokio = { version = "1.21.1", features = ["fs", "rt-multi-thread", "sync"] }
tokio-rustls = "0.23.0"
tonic = { version = "0.8.1", features = ["tls"] }
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["add-extension", "util"] }

[build-dependencies]
tonic-build = "0.8.0"
