[package]
name = "meltout"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "meltout-server"
path = "src/meltout-server.rs"

[[bin]]
name = "meltout-operator"
path = "src/meltout-operator.rs"

[dependencies]
clap = { version = "4.0.19", features = ["derive", "color"] }
crossbeam-queue = "0.3.6"
futures = "0.3.25"
hyper = "0.14.22"
hyper-rustls = { version = "0.23.0", features = ["http2"] }
paste = "1.0.9"
prost = "0.11.2"
prettytable-rs = "0.9.0"
queues = "1.1.0"
rustls-pemfile = "1.0.1"
rustyline = "10.0.0"
sea-orm = { version = "0.10.2", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = "0.10.2"
shlex = "1.1.0"
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["fs", "rt-multi-thread", "sync"] }
tokio-rustls = "0.23.4"
tokio-stream = "0.1.11"
tonic = { version = "0.8.2", features = ["tls"] }
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["add-extension", "util"] }
uuid = {version = "1.2.1", features = ["v4", "fast-rng", "macro-diagnostics"] }

[build-dependencies]
tonic-build = "0.8.2"
